--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="logo.png" alt="UCET Hazaribagh Logo">
                     <div class="logo-text">
                         <span class="logo-main">UCET Hazaribagh</span>
-                        <span class="logo-sub">University College of Engineering and Technology</span>
+                        <span class="logo-sub">University College of Engineering and Technology <br>Hazaribagh, Jharkhand <br>825301</span>
                     </div>
                 </div>
                 
@@ -124,7 +124,7 @@
                             <span class="stat-label">Placement Rate</span>
                         </div>
                         <div class="hero-stat">
-                            <span class="stat-number">A++</span>
+                            <span class="stat-number">B++</span>
                             <span class="stat-label">NAAC Grade</span>
                         </div>
                     </div>
@@ -997,8 +997,8 @@
             
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
-                    <p>&copy; 2024 University College of Engineering and Technology Hazaribagh. All Rights Reserved.</p>
-                    <p>Designed & Developed By: <a href="#">Alok Kumar</a> & <a href="#">Vidhi Bhawra</a></p>
+                    <p>&copy; 2025 University College of Engineering and Technology Hazaribagh. All Rights Reserved.</p>
+                    <p>Designed & Developed By: <a href="#">Code-Blooded-Team</a></p>
                 </div>
             </div>
         </div>
